Fixed image alignment

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ q:after {
   content: close-quote;
 }
 
+
 blockquote {
   /*background-color: #F8F8F8;*/
   border-left: 2px solid #AFC0D2;
@@ -120,10 +121,13 @@ img.social:hover {
     filter: brightness(200%);
 }
 
+.homebuttons {
+  text-align:center;
+}
+
 img.homebutton {
-  max-width:45%;
-  padding-right:2%;
-  padding-left:2%;
+  margin:auto;
+  max-width:40%;
 }
 img.homebutton:hover {
   filter: brightness(30%);
